--- a/pages/resume/resume.css
+++ b/pages/resume/resume.css
@@ -9,18 +9,27 @@ body {
   max-width: 1200px;
 }
 
-.download-link {
-  float: right;
-  border: none;
+.card {
   font-family: "Source Serif Pro", "Cambria", "Charter", "Georgia", sans-serif;
   font-size: 1.5rem;
   box-shadow: -2px 2px 4px 0px rgba(0,0,0,0.5);
+  background-color: white;
+  color: hsl(0, 0%, 20%);
+  border-radius: 4px;
+  padding: 5px;
+}
+
+.description-container {
+  max-width: 8.5in;
+  margin: 1rem auto;
+}
+
+.download-link {
+  float: right;
+  border: none;
   cursor: pointer;
   position: sticky;
   top: 10px;
-  background-color: white;
-  color: hsl(0, 0%, 20%);
-  padding: 5px;
   border-radius: 4px;
   margin-right: 10px;
 }
