--- a/styles.css
+++ b/styles.css
@@ -1,192 +1,118 @@
 :root {
-  --dark-gray: rgba(42, 45, 52, 1);
-  --light-gray: hsl(222, 11%, 24%);
+  --font-serif: "Libre Caslon Text", Georgia, serif;
+  --font-sans: "Josefin Sans", Futura, Tahoma, sans-serif;
+  --text-large: 48px;
+  --text-medium: 24px;
+  --text-small: 18px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-sans, sans-serif);
+  text-transform: uppercase;
 }
 
 body {
-  margin: 0;
+  font-family: var(--font-serif, serif);
+  font-size: var(--text-medium, 24px);
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.header-container {
+  max-width: 600px;
+  margin: 2.25rem auto 0;
+}
+
+.text-container {
+  text-transform: uppercase;
+  font-family: var(--font-sans);
+  font-size: var(--text-large);
   display: grid;
-  grid-template-columns: 30% 70%;
-  height: 100vh;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 4px 1fr 4px 12px;
 }
 
-header > img {
-  width: 30%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  z-index: -1;
-}
-
-#left-column-container {
+.bar {
+  background: #b2b0a0;
+  height: 2px;
   display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0);
-  transition: background-color 0.3s linear;
+  grid-column: 1 / -1;
 }
 
-.circle-container {
-  height: auto;
-  width: auto;
-  max-width: 40vmin;
-  max-height: 40vmin;
-  border-radius: 50%;
-  z-index: -1;
-  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.75);
+.bar--1 {
+  grid-row: 1 / 2;
 }
 
-.circle-container > img {
-  display: block;
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
-  object-fit: cover;
+.bar--2 {
+  grid-row: 2 / 3;
 }
 
-main {
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: 2fr 1fr;
-  height: 100vh;
-  padding: 15px 15px;
-  box-sizing: border-box;
-  overflow-y: scroll;
+.bar--3 {
+  grid-row: 3 / 4;
 }
 
-h1 {
-  margin: 0;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 64px;
-  font-weight: 700;
-  color: white;
+.bar--4 {
+  grid-row: 4 / 5;
 }
 
-p {
-  margin: 15px 0;
-  font-family: "Lato", sans-serif;
-  font-size: 24px;
-  color: white;
+.bar--5 {
+  grid-row: 5 / 6;
 }
 
-a,
-a:visited {
-  color: rgb(255, 255, 255);
+.vertical-bar {
+  grid-row: 1 / -1;
+  background: #b2b0a0;
+  width: 4px;
 }
 
-h2 {
-  margin: 0;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 40px;
-  color: white;
+.vertical-bar--left {
+  grid-column: 1;
 }
 
-section {
-  padding: 15px;
-  box-shadow: 0px 4px 10px -4px rgba(0, 0, 0, 0.64);
+.vertical-bar--right {
+  grid-column: -1;
+  width: 12px;
+  grid-row: 1 / 6;
 }
 
-#title {
-  background-color: rgba(42, 45, 52, 1);
-  grid-column: 1 / 3;
+.vertical-bar--accent {
+  grid-column: 3 / 4;
+  width: 4px;
 }
 
-#links {
-  background-color: rgba(0, 157, 220, 1);
+.text {
+  grid-row: 1/-1;
+  grid-column: 1 / -1;
+  padding: 2rem 3rem;
+  z-index: 1;
+  position: relative;
+  top: 7px;
 }
 
-#projects {
-  background-color: rgba(242, 100, 48, 1);
-  grid-row: 2 / span 2;
+.profile-image-container {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  overflow:hidden;
+  margin: 2.25rem auto 3rem;
 }
 
-#contact {
-  background-color: rgba(0, 155, 114, 1);
+.profile-image-container img {
+  width: inherit;
+  height: inherit;
+  object-fit: contain;
 }
 
-#footer {
-  background-color: rgba(103, 97, 168, 1);
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-}
-
-#footer > p {
-  font-size: 14px;
-  margin: 0;
-}
-
-@media (max-width: 800px) {
-  main {
-    grid-template-columns: 1fr;
-    padding: 0;
-    overflow: inherit;
-    height: auto;
-  }
-  #title {
-    grid-column: 1;
-  }
-  p {
-    font-size: 18px;
-  }
-
-  body {
-    grid-template-columns: 1fr;
-  }
-  header {
-    position: static;
-    height: auto;
-    width: 100%;
-  }
-  .circle-container {
-    border-radius: 0;
-    max-height: 100%;
-    max-width: 100%;
-    height: 100%;
-    box-shadow: none;
-  }
-
-  .circle-container > img {
-    border-radius: 0;
-  }
-
-  header > img {
-    display: none;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  #background-image {
-    display: none;
-  }
-
-  #left-column-container {
-    background-color: var(--dark-gray);
-  }
-
-  .circle-container {
-    z-index: 1;
-  }
-
-  main {
-    background-color: var(--dark-gray);
-  }
-
-  #title {
-    background-color: var(--light-gray);
-  }
-
-  #projects {
-    background-color: rgb(118, 58, 55);
-  }
-
-  #links {
-    background-color: rgb(28, 70, 86);
-  }
-
-  #contact {
-    background-color: rgb(21, 80, 64);
-  }
+.header-description {
+  font-family: var(--font-serif);
+  font-size: var(--text-small);
+  max-width: 550px;
 }
