--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
   --text-large: 48px;
   --text-medium: 24px;
   --text-small: 18px;
+  --font-color--primary: #e5e5e6;
+}
+
+html {
+  background: #343f5e;
 }
 
 h1,
@@ -14,11 +19,13 @@ h5,
 h6 {
   font-family: var(--font-sans, sans-serif);
   text-transform: uppercase;
+  color: var(--font-color--primary, #e5e5e6);
 }
 
 body {
   font-family: var(--font-serif, serif);
   font-size: var(--text-medium, 24px);
+  color: var(--font-color--primary);
 }
 
 .container {
@@ -28,13 +35,15 @@ body {
 
 .header-container {
   max-width: 600px;
-  margin: 2.25rem auto 0;
+  margin: 0 auto;
+  padding-top: 2.25rem;
 }
 
 .text-container {
   text-transform: uppercase;
   font-family: var(--font-sans);
   font-size: var(--text-large);
+  color: var(--font-color--primary);
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-columns: 4px 1fr 4px 12px;
@@ -101,8 +110,10 @@ body {
   width: 200px;
   height: 200px;
   border-radius: 100px;
-  overflow:hidden;
+  overflow: hidden;
   margin: 2.25rem auto 3rem;
+  position: relative;
+  z-index: 2;
 }
 
 .profile-image-container img {
@@ -115,4 +126,74 @@ body {
   font-family: var(--font-serif);
   font-size: var(--text-small);
   max-width: 550px;
+}
+
+.staff-presentation-layer {
+  width: 100%;
+  height: 1200px;
+  overflow: hidden;
+  position:absolute;
+  z-index: 1;
+}
+
+.staff-presentation-layer--top {
+  z-index:3;
+}
+
+.staff-presentation-layer--top .staff__bar {
+  visibility: hidden;
+}
+
+.staff-presentation-layer--top .staff__bar.staff__bar--top {
+  visibility: visible;
+}
+
+.staff-container {
+  position: absolute;
+  width: 100%;
+}
+
+.floatbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: float 4s ease-in-out infinite;
+}
+
+.staff {
+  border: none;
+  height: 100px;
+  width: 800px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* transform: perspective(100px) skew(20deg, -45deg); */
+  /* transform: perspective(100px) rotateX(-104.497deg) rotateY(-30.8485deg) skew(20deg, -45deg); */
+  transform: perspective(100px) rotateX(231deg) rotateY(19deg) skew(359deg, 142deg);
+  right: 530px;
+  top: -50px;
+}
+
+.staff__bar {
+  height: 2px;
+  background: darkgray;
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-10px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+.reset {
+  transition-property: transform;
+  transition-duration: 0.5s;
+  transform: perspective(100px) rotateX(0deg) rotateY(0deg) skew(20deg, -45deg);
 }
