--- a/styles.css
+++ b/styles.css
@@ -17,183 +17,95 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-sans, sans-serif);
+  font-family: var(--font-sansa, "Josefin Sans", Futura, Tahoma, sans-serif);
   text-transform: uppercase;
   color: var(--font-color--primary, #e5e5e6);
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: var(--text-large);
+}
+
+h2 {
+  font-size: var(--text-medium);
 }
 
 body {
-  font-family: var(--font-serif, serif);
-  font-size: var(--text-medium, 24px);
+  font-family: var(--font-serif, "Libre Caslon Text", Georgia, serif);
+  font-size: var(--text-small, 18px);
   color: var(--font-color--primary);
 }
 
-.container {
+.content-container {
   max-width: 800px;
   margin: 0 auto;
 }
 
-.header-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding-top: 2.25rem;
-}
-
-.text-container {
-  text-transform: uppercase;
-  font-family: var(--font-sans);
-  font-size: var(--text-large);
-  color: var(--font-color--primary);
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 4px 1fr 4px 12px;
-}
-
-.bar {
-  background: #b2b0a0;
-  height: 2px;
-  display: flex;
-  grid-column: 1 / -1;
-}
-
-.bar--1 {
-  grid-row: 1 / 2;
-}
-
-.bar--2 {
-  grid-row: 2 / 3;
-}
-
-.bar--3 {
-  grid-row: 3 / 4;
-}
-
-.bar--4 {
-  grid-row: 4 / 5;
-}
-
-.bar--5 {
-  grid-row: 5 / 6;
-}
-
-.vertical-bar {
-  grid-row: 1 / -1;
-  background: #b2b0a0;
-  width: 4px;
-}
-
-.vertical-bar--left {
-  grid-column: 1;
-}
-
-.vertical-bar--right {
-  grid-column: -1;
-  width: 12px;
-  grid-row: 1 / 6;
-}
-
-.vertical-bar--accent {
-  grid-column: 3 / 4;
-  width: 4px;
-}
-
-.text {
-  grid-row: 1/-1;
-  grid-column: 1 / -1;
-  padding: 2rem 3rem;
-  z-index: 1;
-  position: relative;
-  top: 7px;
-}
-
-.profile-image-container {
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-  overflow: hidden;
-  margin: 2.25rem auto 3rem;
-  position: relative;
-  z-index: 2;
-}
-
-.profile-image-container img {
-  width: inherit;
-  height: inherit;
-  object-fit: contain;
-}
-
-.header-description {
-  font-family: var(--font-serif);
-  font-size: var(--text-small);
-  max-width: 550px;
-}
-
-.staff-presentation-layer {
-  width: 100%;
-  height: 1200px;
-  overflow: hidden;
-  position:absolute;
-  z-index: 1;
-}
-
-.staff-presentation-layer--top {
-  z-index:3;
-}
-
-.staff-presentation-layer--top .staff__bar {
-  visibility: hidden;
-}
-
-.staff-presentation-layer--top .staff__bar.staff__bar--top {
-  visibility: visible;
-}
-
-.staff-container {
-  position: absolute;
-  width: 100%;
-}
-
-.floatbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  animation: float 4s ease-in-out infinite;
-}
-
-.staff {
-  border: none;
-  height: 100px;
-  width: 800px;
-  position: relative;
+.header {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  /* transform: perspective(100px) skew(20deg, -45deg); */
-  /* transform: perspective(100px) rotateX(-104.497deg) rotateY(-30.8485deg) skew(20deg, -45deg); */
-  transform: perspective(100px) rotateX(231deg) rotateY(19deg) skew(359deg, 142deg);
-  right: 530px;
-  top: -50px;
+  align-items: center;
+  margin: 3rem 0;
 }
 
-.staff__bar {
-  height: 2px;
-  background: darkgray;
+.header__text {
+  margin-bottom: 2rem;
 }
 
-@keyframes float {
-  0% {
-    transform: translatey(0px);
-  }
-  50% {
-    transform: translatey(-10px);
-  }
-  100% {
-    transform: translatey(0px);
-  }
+.header__image {
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
 }
 
-.reset {
-  transition-property: transform;
-  transition-duration: 0.5s;
-  transform: perspective(100px) rotateX(0deg) rotateY(0deg) skew(20deg, -45deg);
+.description-container {
+  margin-bottom: 3rem;
+}
+
+.project-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  /* TODO: Test flex fallback */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.project-list__item {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-list__item--wide {
+  grid-column: span 2;
+}
+
+.project__title {
+  position: relative;
+  top: 16px;
+  background: #ffd600;
+  display: inline;
+  padding: 4px;
+  color: black;
+  font-family: var(--font-serif);
+  text-transform: initial;
+  font-style: italic;
+  font-weight: 400;
+  align-self: flex-start;
+}
+
+.project_title--bottom {
+  align-self: flex-end;
+  top: calc(100% - 16px);
+}
+
+.project__image {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
