--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,30 @@
   --font-serif: "Libre Caslon Text", Georgia, serif;
   --font-sans: "Josefin Sans", Futura, Tahoma, sans-serif;
   --text-large: 48px;
-  --text-medium: 24px;
+  --text-medium: 32px;
   --text-small: 18px;
   --font-color--primary: #e5e5e6;
+}
+
+@font-face {
+  font-family: "Libre Caslon Text";
+  src: url("./fonts/LibreCaslonText-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Libre Caslon Text";
+  src: url("./fonts/LibreCaslonText-Bold.otf") format("opentype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Libre Caslon Text";
+  src: url("./fonts/LibreCaslonText-Italic.otf") format("opentype");
+  font-weight: normal;
+  font-style: italic;
 }
 
 html {
@@ -46,11 +67,17 @@ body {
   font-family: var(--font-serif, "Libre Caslon Text", Georgia, serif);
   font-size: var(--text-small, 18px);
   color: var(--font-color--primary);
+  overflow-x: hidden;
+}
+
+p {
+  line-height: 1.75rem;
 }
 
 .content-container {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .row {
@@ -60,22 +87,94 @@ body {
 .header {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 3rem 0;
+  margin: 3rem 0 2rem 0;
 }
 
 .header__text {
-  margin-bottom: 2rem;
+  color: #ffd600;
 }
 
-.header__image {
-  width: 200px;
-  height: 200px;
-  border-radius: 200px;
+.header__subtext {
+  font-family: var(--font-serif);
+  font-size: var(--text-medium);
+  font-style: italic;
+  text-transform: lowercase;
+  margin-bottom: 0.5rem;
 }
 
 .description-container {
   margin-bottom: 3rem;
+}
+
+.text-container {
+  text-transform: uppercase;
+  font-family: var(--font-sans);
+  font-size: var(--text-large);
+  color: var(--font-color--primary);
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 4px 4px 2px 1fr;
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 1rem;
+}
+
+.text {
+  grid-row: 1/-1;
+  grid-column: 1 / -1;
+  padding: 1rem 1.5rem;
+  z-index: 1;
+  position: relative;
+  top: 7px;
+}
+
+.bar {
+  background: rgba(255, 255, 255, 0.1);
+  height: 2px;
+  display: flex;
+  grid-column: 1 / -1;
+  width: 100vw;
+}
+
+.bar--1 {
+  grid-row: 1 / 2;
+}
+
+.bar--2 {
+  grid-row: 2 / 3;
+}
+
+.bar--3 {
+  grid-row: 3 / 4;
+}
+
+.bar--4 {
+  grid-row: 4 / 5;
+}
+
+.bar--5 {
+  grid-row: 5 / 6;
+}
+
+.vertical-bar {
+  grid-row: 1 / -1;
+  background: #ffffff;
+  width: 2px;
+}
+
+.vertical-bar--left {
+  grid-column: 1;
+  width: 4px;
+}
+
+.vertical-bar--right {
+  grid-column: -1;
+  grid-row: 1 / 6;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.vertical-bar--accent {
+  grid-column: 3 / 4;
 }
 
 .project-list {
@@ -106,7 +205,7 @@ body {
   background: #ffd600;
   display: inline;
   padding: 4px;
-  color: black;
+  color: #3c3c3c;
   font-family: var(--font-serif);
   text-transform: initial;
   font-style: italic;
@@ -126,6 +225,25 @@ body {
   max-width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.background-lines {
+  position: relative;
+  z-index: -1;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transform: skewY(10deg);
+  margin-bottom: -4rem;
+  margin-top: -8rem;
+}
+
+.background-lines__line {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  height: 2px;
 }
 
 .list-container {
