--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,10 @@ p {
   display: flex;
 }
 
+.positioned {
+  position: relative;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -228,16 +232,20 @@ p {
 }
 
 .background-lines {
-  position: relative;
+  position: absolute;
   z-index: -1;
   width: 100%;
-  height: 200px;
+  height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   transform: skewY(10deg);
-  margin-bottom: -4rem;
-  margin-top: -8rem;
+  top: 300px;
+}
+
+.background-lines--reversed {
+  transform: skewY(-5deg);
+  top: -250px;
 }
 
 .background-lines__line {
