--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 :root {
   --font-serif: "Libre Caslon Text", Georgia, serif;
   --font-sans: "Josefin Sans", Futura, Tahoma, sans-serif;
-  --text-large: 48px;
-  --text-medium: 32px;
-  --text-small: 18px;
+  --text-large: 72px;
+  --text-medium: 48px;
+  --text-small: 24px;
   --font-color--primary: #e5e5e6;
 }
 
@@ -61,6 +61,14 @@ ul {
 
 a {
   color: var(--font-color--primary);
+  text-decoration: none;
+  text-decoration-color: #ffd600;
+  text-decoration-thickness: 2px;
+  transition: color .3s;
+}
+
+a:hover {
+  color: #ffd600;
 }
 
 body {
@@ -71,17 +79,24 @@ body {
 }
 
 p {
-  line-height: 1.75rem;
+  line-height: 2.5rem;
 }
 
 .content-container {
-  max-width: 1200px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 0 1rem;
 }
 
+.content-container--large {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .row {
   display: flex;
+  margin-bottom: 2rem;
 }
 
 .positioned {
@@ -91,19 +106,20 @@ p {
 .header {
   display: flex;
   flex-direction: column;
-  margin: 3rem 0 2rem 0;
+  margin: 10rem 0 2rem 0;
 }
 
 .header__text {
   color: #ffd600;
+  font-size: 5rem;
 }
 
 .header__subtext {
   font-family: var(--font-serif);
-  font-size: var(--text-medium);
+  font-size: 3rem;
   font-style: italic;
   text-transform: lowercase;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .description-container {
@@ -119,7 +135,7 @@ p {
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-columns: 4px 4px 2px 1fr;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1600px;
   padding: 0 1rem;
 }
 
@@ -191,7 +207,7 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 8rem;
 }
 
 .project-list__item {
@@ -227,6 +243,7 @@ p {
 
 .project__image {
   max-width: 100%;
+  max-height: 400px;
   height: 100%;
   object-fit: cover;
 }
@@ -240,12 +257,18 @@ p {
   flex-direction: column;
   justify-content: space-between;
   transform: skewY(10deg);
-  top: 300px;
+  top: 500px;
 }
 
 .background-lines--reversed {
   transform: skewY(-5deg);
   top: -250px;
+}
+
+.background-lines--large {
+  transform: skewY(-8deg) scale(8);
+  height: 100px;
+  top: -50px;
 }
 
 .background-lines__line {
@@ -281,6 +304,25 @@ p {
 }
 
 @media screen and (max-width: 480px) {
+  :root {
+    --text-large: 48px;
+    --text-medium: 32px;
+    --text-small: 18px;
+  }
+
+  .header__text {
+    color: #ffd600;
+    font-size: 17vw;
+  }
+  
+  .header__subtext {
+    font-family: var(--font-serif);
+    font-size: 1.5rem;
+    font-style: italic;
+    text-transform: lowercase;
+    margin-bottom: 1.5rem;
+  }
+
   .project-list {
     grid-template-columns: 1fr;
     gap: 0;
