--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,14 @@ p {
   object-fit: cover;
 }
 
+.background-lines-container {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
 .background-lines {
   position: absolute;
   z-index: -1;
@@ -330,6 +338,7 @@ p {
 
   .project-list__item {
     height: 240px;
+    position: relative;
   }
 
   .project-list__item--wide {
