--- a/styles.css
+++ b/styles.css
@@ -399,6 +399,27 @@ p {
   width: 100%;
   background: rgba(255, 255, 255, 0.1);
   height: 2px;
+  animation: float 4s ease-in-out infinite;
+}
+
+.background-lines-container .background-lines__line {
+  animation: float-small 4s ease-in-out infinite;
+}
+
+.background-lines-container .background-lines__line:nth-child(2) {
+  animation-delay: .5s;
+}
+
+.background-lines-container .background-lines__line:nth-child(3) {
+  animation-delay: 1s;
+}
+
+.background-lines-container .background-lines__line:nth-child(4) {
+  animation-delay: 1.5s;
+}
+
+.background-lines-container .background-lines__line:nth-child(5) {
+  animation-delay: 2s;
 }
 
 .list-container {
@@ -547,5 +568,32 @@ p {
       display: grid;
       grid-template-columns: 1fr 1fr;
     }
+  }
+}
+
+
+/* Animation Styles */
+
+@keyframes float-small {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-1px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-10px);
+  }
+  100% {
+    transform: translatey(0px);
   }
 }
